# sails

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
config/: channels.yaml  keywords.yaml  keywords_cx.yaml  keywords_hr.yaml  sources.yaml  yandex_agents.yaml
deploy/: README.md  env.production.example  nginx-tender-agents.conf  rsync-to-server.sh  setup-server.sh  tender-agents.service
docs/: compliance-152fz.md  jules-chain02-autopilot.md  jules-sessions-task02.md  jules-sessions.md  platform-process-osminog.md  product-review-sales-managers.md  product-roadmap-v2.md  task-01-spec.md  vision-ai-collection-platform.md  yandex-setup.md
prompts/: JULES-OSM-IMPLEMENTATION.md  agents-yandex-prompt-review.md  cursor-task-manager-features.md  jules-task-01-collect-cli.md  jules-task-02-browser-session.md  jules-task-03-sberbank-search.md  jules-task-04-sberbank-pagination.md  jules-task-05-sberbank-detail.md  jules-task-06-orchestrator.md  jules-task-07-jsonl-store.md  jules-task-08-sqlite-list.md  jules-task-09-observability.md  jules-task-10-extraction-hardening.md  jules-task-11-offline-fixtures.md  jules-task-12-period-filter-ui.md  jules-task-13-collect-report.md  jules-task-14-resilience.md  jules-task-15-export-csv.md  jules-task-16-zakupki-adapter.md  jules-task-17-llm-fallback.md  jules-task-excel-import.md  jules-task-research-captcha-compliance.md  jules-task-zakupki-resilience.md  jules-task01-roadmap.md  jules-task02-roadmap.md  platform-procurement-lpr-osminog.md  product-review-sales-managers.md  roadmap-sales-tool-v2.md  vision-ai-collection-platform.md
scripts/: com.openclaw.tender-leads.plist.example  daily-cron.sh  jules_chain02_monitor.py  jules_create_sessions.py
tests/: conftest.py  fixture_browser.py  test_cli.py  test_compliance.py  test_config_sources_d.py  test_db.py  test_hr_ratings_parser.py  test_ingest_universal.py  test_listing_extract.py  test_llm_fallback.py  test_offline.py  test_page_context.py  test_platforms.py  test_report.py  test_research_captcha.py  test_research_logic.py  test_sberbank_adapter.py  test_sberbank_detail.py  (+7 more)
(+90 files in other folders)
