[project]
name = "tender-lead-agents"
version = "0.1.0"
description = "Multi-agent system for B2B leads: procurement tenders (EIS) plus open-media channels (ratings, articles) with CRM export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.111.0", "uvicorn[standard]>=0.30.0", "python-multipart>=0.0.9"]
playwright = ["playwright>=1.44.0"]
crawl4ai = ["crawl4ai>=0.8.0"]
yandex = ["openai>=1.40.0"]
scrapegraph = []  # uses httpx + SGAI_API_KEY
all = ["tender-lead-agents[web,playwright,crawl4ai,yandex]"]
excel = ["openpyxl>=3.1.0"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
tender-leads = "tender_agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tender_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
