[project]
name = "tender-lead-agents"
version = "0.2.0"
description = "Сбор тендеров по ключевым словам и фильтрам (переписываем с нуля)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
browser = ["playwright>=1.44.0"]
httpx = ["httpx>=0.27.0"]
llm = ["httpx>=0.27.0"]
dev = ["pytest>=8.2.0", "ruff>=0.4.0"]

[project.scripts]
tender-leads = "tender_agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tender_agents"]

[tool.hatch.build.targets.sdist]
include = ["src/tender_agents", "README.md", "AGENTS.md"]
